[gd_scene load_steps=8 format=3 uid="uid://ci2ugpkuwfalx"]

[ext_resource type="Script" path="res://Nodes/Entities/PistonEntity/piston_entity.gd" id="1_jabv4"]
[ext_resource type="Texture2D" uid="uid://dke6eecvnfl0h" path="res://Nodes/Entities/PistonEntity/piston-sheet.png" id="2_a1uof"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_35l4e"]
size = Vector2(32, 11)

[sub_resource type="Animation" id="Animation_wn2lg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PistonPlaceholder:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_r7tbd"]
resource_name = "piston_not_working"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("PistonPlaceholder:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -64)]
}

[sub_resource type="Animation" id="Animation_42pyy"]
resource_name = "piston_working"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("PistonPlaceholder:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PistonPlaceholder:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tkv0s"]
_data = {
"RESET": SubResource("Animation_wn2lg"),
"piston_not_working": SubResource("Animation_r7tbd"),
"piston_working": SubResource("Animation_42pyy")
}

[node name="PistonEntity" type="Node2D"]
script = ExtResource("1_jabv4")

[node name="VerifierArea" type="Area2D" parent="."]
position = Vector2(64, -20)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="VerifierArea"]
position = Vector2(-64, -12.5)
shape = SubResource("RectangleShape2D_35l4e")

[node name="PistonPlaceholder" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(0, -84)
texture = ExtResource("2_a1uof")
centered = false
hframes = 16

[node name="PistonAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tkv0s")
}
autoplay = "piston_not_working"
playback_default_blend_time = 0.5

[connection signal="area_entered" from="VerifierArea" to="." method="_on_verifier_area_area_entered"]
[connection signal="area_exited" from="VerifierArea" to="." method="_on_verifier_area_area_exited"]
